# bip300301_enforcer

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  buf.gen.yaml  buf.yaml  build.rs  prek.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build_docker.yaml  check_lint_build_release.yaml
app/: Cargo.toml  build.rs  error.rs  file_descriptors.rs  logging.rs  main.rs
bip47/: Cargo.toml
bip47/src/: lib.rs  util.rs
cusf_miner_sidecar/: Cargo.toml
cusf_miner_sidecar/src/: block.rs  error.rs  inventory.rs  lib.rs  rpc.rs  server.rs
cusf_rules_bip360/: Cargo.toml
cusf_rules_bip360/src/: main.rs
cusf_rules_drivechain/: Cargo.toml
cusf_rules_drivechain/src/: main.rs
docs/: BIP360_OVERLOAD_ADDENDUM.md  CUSF-BIP360.md  KELLNR_PUBLISH.md  MEMPOOL_RELAY_POLICY.md  MULTI_ENFORCER.md  MULTI_LEAF_P2MR.md  OVERLOAD_VECTORS.md  P2MR_SIGNER.md  REGTEST_DEMO.md  SECURITY_DESIGN_NOTES.md  SHRINCS_DEFERRED.md  SIGNET_WORKSHOP.md  TIER_A_P2MR_ALIGNMENT.md  TIER_B_CUSF_MINER.md  TIER_B_CUSF_SIDECAR.md  TIER_B_P2MR_MEMPOOL.md  TIER_B_PROTOCOL_GREEN.md  UPSTREAM_PR.md  WOTS_DEFERRED.md  ZMQ_CUSF_BIP360_FINDINGS.md
integration_tests/: Cargo.toml  README.md  bip360_block.rs  bip360_dual_node.rs  bip360_tx_report.rs  blk_dat.rs  block_verdict.rs  example.env  integration_test.rs  lib.rs  main.rs  mine.rs  regtest.rs  setup.rs  signet.rs  test_activation_height.rs  test_bip360_blk_dat_e2e.rs  test_bip360_invalid_block.rs  test_bip360_invalid_spend.rs  test_bip360_kitchen_sink_tier_a.rs  test_bip360_multi_leaf.rs  test_bip360_p2p_mempool_e2e.rs  test_bip360_tier_b_cusf_factory.rs  test_bip360_tier_b_cusf_miner.rs  test_bip360_tier_b_cusf_sidecar.rs  test_bip360_tier_b_p2mr_mempool.rs  test_bip360_valid_spend.rs  test_blinded_m6_roundtrip.rs  test_competing_deposits.rs  test_consecutive_deposits.rs  test_cusf_claims.rs  test_drivechain_blk_dat_e2e.rs  test_file_based_block_parser.rs  test_inactive_drivechain_output.rs  test_invalid_block.rs  test_peer_bmm_request.rs  test_reorg_disconnect_block.rs  test_reusable_payments.rs  test_seed_migration.rs  test_sidechain_ack_policy.rs  (+3 more)
lib/: Cargo.toml  bins.rs  build.rs  cli.rs  display.rs  errors.rs  lib.rs  messages.rs  p2p.rs  proto.rs  rpc_client.rs  server.rs  server_validator.rs  types.rs  version.rs
lib/block_producer/: coinbase.rs  db.rs  error.rs  mod.rs
lib/examples/: p2mr_signer.rs
lib/proto/: cusf.rs  google.rs
lib/proto/cusf/: common.rs  crypto.rs  mainchain.rs  sidechain.rs
lib/server/: block_producer.rs  crypto.rs  mod.rs
lib/server/validator/: grpc.rs  json_rpc.rs  mod.rs
lib/server/wallet/: grpc.rs  json_rpc.rs  mod.rs
lib/validator/: cusf_enforcer.rs  main_rest_client.rs  mod.rs  parse_block_files.rs  sync_state_summary.rs  test_utils.rs
lib/validator/dbs/: block_hashes.rs  diff.rs  mod.rs  p2mr_utxos.rs  util.rs
lib/validator/pqc/: core_interop.rs  kitchen_sink_3b.rs  leaf_script.rs  limits.rs  merkle.rs  mod.rs  multi_leaf.rs  overload_vectors.rs  p2mr_utxo.rs  protocol_dump.rs  protocol_vectors.rs  published_vectors.rs  schemes.rs  signer_dev.rs  spend.rs
lib/validator/pqc/data/: README.md  core_hybrid.json  kitchen_sink_3b.json  schnorr_3c.json
lib/validator/quantum/: activation.rs  leaf_script.rs  limits.rs  merkle.rs  mod.rs  multi_leaf.rs  p2mr_output.rs  p2mr_utxo.rs  signer_dev.rs  spend.rs
lib/validator/rules/: bip360.rs  drivechain.rs  ipc.rs  mod.rs
lib/validator/task/: block_files.rs  error.rs  mod.rs
lib/wallet/: cusf_block_producer.rs  error.rs  mine.rs  mnemonic.rs  mod.rs  seed_store.rs  sync.rs  thread_safe_connection.rs  util.rs
lib/wallet/reusable_payments/: bip47.rs  impl.rs  mod.rs  scan.rs  silent_payments.rs  silent_payments_test_vectors.rs  util.rs
proto/: buf.yaml  validator.proto
proto/cusf/mainchain/v1/: block_producer.proto  validator.proto  wallet.proto
proto/mainchain/v1/: mainchain.proto
proto/validator/v1/: validator.proto
scripts/: analyze_sync_logs.py  live-tip-rules-workers-e2e.sh  setup_integration_tests.sh  sigterm-rules-workers-e2e.sh  smoke-rules-workers-tip.sh  trace_enforcer_macos.sh  validate-rules-engine.sh  verify_reflection.sh
src/: bins.rs  bip300.rs  cli.rs  convert.rs  errors.rs  gen.rs  jsonrpc.rs  lib.rs  main.rs  messages.rs  p2p.rs  proto.rs  rpc_client.rs  server.rs  types.rs  validator.rs  wallet.rs  zmq.rs
src/bins/: mod.rs
src/validator/: cusf_enforcer.rs  mod.rs  task.rs
src/validator/dbs/: block_hashes.rs  mod.rs  util.rs
src/validator/task/: error.rs  mod.rs
src/wallet/: blockchain.rs  cusf_block_producer.rs  error.rs  mine.rs  mnemonic.rs  mod.rs  signet_miner.rs
test_vectors/: p2mr_overload_construction.json
