# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["app", "lib", "integration_tests"]

[workspace.package]
authors = [
    "Ash Manning <ash@layertwolabs.com>",
    "Nikita Chashchinskii <nikita.chashchinskii@gmail.com>",
    "Torkel Rogstad <torkel@rogstad.io>",
]
edition = "2024"
publish = false
version = "0.3.4"

[workspace.dependencies]
bdk_wallet = { version = "2.1.0" }
bitcoin = "0.32.6"
clap = { version = "4.5.18", default-features = false }
either = "1.13.0"
futures = "0.3.30"
hex = "0.4.3"
jsonrpsee = { version = "0.25.1" }
miette = { version = "7.1.0", default-features = false }
parking_lot = { version = "0.12.3" }
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = { version = "1.0.219" }
thiserror = "2.0.11"
tokio = { version = "1.36.0", default-features = false }
tokio-stream = "0.1.15"
tokio-util = "0.7.16"
tonic = "0.13.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[workspace.dependencies.bitcoin-jsonrpsee]
git = "https://github.com/LayerTwo-Labs/bitcoin-jsonrpsee.git"
rev = "b21948fb434b8fd76bc6a2deeeb2133e7bd78a63"

[workspace.dependencies.cusf-enforcer-mempool]
git = "https://github.com/LayerTwo-Labs/cusf-enforcer-mempool.git"
rev = "d9aeeb7d38de278061521945f34c7eac767be953"

[workspace.dependencies.educe]
version = "0.6.0"
default-features = false
features = ["Clone", "Debug"]

[workspace.dependencies.ouroboros]
git = "https://github.com/erikjohnston/ouroboros.git"
rev = "ea82b33947f60c511dac6eb3815b6af3f6c3f555"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
print_stderr = "deny"
print_stdout = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
wildcard_imports = "deny"

[workspace.lints.rust]
let_underscore_drop = "deny"

# temp-dir does not leak correctly after clone
# https://gitlab.com/leonhard-llc/ops/-/issues/17
[patch.crates-io.temp-dir]
git = "https://gitlab.com/A-Manning/leonhard-llc-ops.git"
branch = "temp-dir-leak"

# Have to use a patch here. Depending directly on the fork breaks macros. 
[patch.crates-io.tracing-appender]
git = "https://github.com/torkelrogstad/tokio-tracing.git"
branch = "log-rotation-size"
