[package]
name = "bip300301_enforcer"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bdk_wallet = { workspace = true }
bip300301_enforcer_lib = { path = "../lib", default-features = false }
bitcoin = { workspace = true }
bitcoin-jsonrpsee = { workspace = true }
clap = { workspace = true, features = ["std"] }
cusf-enforcer-mempool = { workspace = true }
educe = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
http = "1.2.0"
jsonrpsee = { workspace = true, features = ["server"] }
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = "0.14.5"
tonic-reflection = "0.14.5"
# needs to line up with jsonrpsee tower version...
tower = "0.5.3"
tower-http = { version = "0.6.1", features = ["trace", "request-id"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[features]
default = ["rustls"]
openssl = ["bip300301_enforcer_lib/openssl"]
rustls = ["bip300301_enforcer_lib/rustls"]

[lints]
workspace = true

[[bin]]
name = "bip300301_enforcer"
path = "main.rs"
