[package]
name = "bip300301_enforcer"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
bdk_wallet = { workspace = true }
buffa = { workspace = true }
bip300301_enforcer_lib = { path = "../lib", default-features = false }
bitcoin = { workspace = true }
bitcoin-jsonrpsee = { workspace = true }
clap = { workspace = true, features = ["std"] }
cusf-enforcer-mempool = { workspace = true }
educe = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
jiff = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
connectrpc = { workspace = true }
connectrpc-health = { workspace = true }
# needs to line up with jsonrpsee tower version...
tower = { workspace = true, features = ["limit"] }
tower-http = { workspace = true, features = ["trace", "request-id"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }

[features]
default = ["rustls"]
openssl = ["bip300301_enforcer_lib/openssl"]
rustls = ["bip300301_enforcer_lib/rustls"]

[lints]
workspace = true

[[bin]]
name = "bip300301_enforcer"
path = "main.rs"
