[package]
name = "bip47"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
bitcoin = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
