[package]
name = "bip300301_enforcer_integration_tests"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.89"
bdk_wallet = { workspace = true }
bip300301_enforcer_lib = { path = "../lib", default-features = false }
bitcoin-jsonrpsee = { workspace = true }
bitcoin = { workspace = true }
cfg-if = "1.0.0"
cusf-enforcer-mempool = { workspace = true }
dotenvy = "0.15.7"
either = "1.13.0"
futures = { workspace = true }
hex = { workspace = true }
indicatif = { version = "0.17.9", features = ["futures"] }
jsonrpsee = { workspace = true }
thiserror = { workspace = true }
libtest-mimic = "0.8.1"
miniscript = "12.3.0"
reserve-port = "2.0.1"
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
temp-dir = "0.2.0"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = "0.3.8"
tokio-stream = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["rustls"]
openssl = ["bip300301_enforcer_lib/openssl"]
rustls = ["bip300301_enforcer_lib/rustls"]

[lints]
workspace = true

[lib]
name = "bip300301_enforcer_integration_tests"
path = "lib.rs"

[[example]]
name = "integration_tests"
path = "main.rs"
harness = false
test = false
crate-type = ["bin"]
