[package]
name = "bip300301_enforcer_integration_tests"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bdk_wallet = { workspace = true }
bip300301_enforcer_lib = { path = "../lib", default-features = false }
bitcoin-jsonrpsee = { workspace = true }
bitcoin = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
cfg-if = { workspace = true }
connectrpc = { workspace = true, features = ["client"] }
cusf-enforcer-mempool = { workspace = true }
dotenvy = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true }
thiserror = { workspace = true }
libtest-mimic = { workspace = true }
parking_lot = { workspace = true }
reserve-port = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
temp-dir = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["rustls"]
openssl = ["bip300301_enforcer_lib/openssl"]
rustls = ["bip300301_enforcer_lib/rustls"]
rustls-ring = ["bip300301_enforcer_lib/rustls-ring"]

[lints]
workspace = true

[lib]
name = "bip300301_enforcer_integration_tests"
path = "lib.rs"
test = false
doctest = false

[[example]]
name = "integration_tests"
path = "main.rs"
harness = false
test = false
crate-type = ["bin"]
