[package]
name = "bip300301_enforcer_lib"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = "0.13.2"
prost-build = "0.13.3"
protox = "0.7.1"
tonic-build = "0.13.0"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
async-broadcast = "0.7.1"
async-lock = "3.4.0"
bdk_chain = "0.21.1"
bdk_electrum = { version = "0.20.1", default-features = false }
bdk_esplora = { version = "0.20.1", default-features = false, features = [
    "tokio",
    "async-https-rustls",
] }
bdk_wallet = { workspace = true, features = ["keys-bip39", "rusqlite"] }
bincode = "1.3.3"
bitcoin = { workspace = true }
bitcoin-jsonrpsee = { workspace = true }
bitcoin-send-tx-p2p = "0.3.0"
blake3 = "1.5.4"
byteorder = "1.5.0"
clap = { workspace = true, features = ["derive", "string", "std"] }
cusf-enforcer-mempool = { workspace = true }
derive_more = { version = "1.0.0", features = ["debug", "display"] }
ed25519-dalek-bip32 = "0.3.0"
educe = { workspace = true }
either = { workspace = true }
fallible-iterator = "0.3.0"
fatality = "0.1.1"
futures = { workspace = true }
hashlink = { version = "0.10.0", features = ["serde_impl"] }
heed-types = "0.21.0"
hex = { workspace = true }
jiff = { version = "0.2.4", default-features = false }
jsonrpsee = { workspace = true, features = ["client"] }
miette = { workspace = true, features = ["derive"] }
nom = "7.1.3"
nonempty = "0.11.0"
ordermap = { version = "0.5.3", features = ["serde"] }
ouroboros = { workspace = true }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
prost = "0.13.2"
prost-types = "0.13.3"
rand = "0.8.5"
regex = "1.11.0"
reqwest = { workspace = true }
# needs to line up with BDK version
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = "1.0.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.16"
sneed = { version = "0.0.19", features = ["observe"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
# Latest version (0.6.0) introduces a non-compatible libsqlite3-sys version
tokio-rusqlite = "0.5.1"
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
transitive = "1.2.0"
url = "2.5.4"
uuid = "1.12.1"
zeromq = "0.4.1"

[features]
default = ["rustls"]
openssl = ["bdk_electrum/use-openssl"]
rustls = ["bdk_electrum/use-rustls"]

[lints]
workspace = true

[lib]
name = "bip300301_enforcer_lib"
path = "lib.rs"
