[package]
name = "bip300301_enforcer_lib"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }

[dependencies]
aes-gcm = { workspace = true, features = ["std"] }
argon2 = { workspace = true, features = ["std"] }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
bdk_chain = { workspace = true }
bdk_electrum = { workspace = true }
bdk_esplora = { workspace = true, features = ["tokio", "async-https-rustls"] }
bdk_wallet = { workspace = true, features = ["keys-bip39", "rusqlite"] }
bitcoin = { workspace = true }
bitcoin-jsonrpsee = { workspace = true }
bitcoin-send-tx-p2p = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true, features = ["derive", "string", "std"] }
cusf-enforcer-mempool = { workspace = true }
derive_more = { workspace = true, features = ["debug", "display"] }
either = { workspace = true }
fallible-iterator = { workspace = true }
fatality = { workspace = true }
futures = { workspace = true }
hashlink = { workspace = true, features = ["serde_impl"] }
heed-types = { workspace = true }
hex = { workspace = true }
jiff = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
miette = { workspace = true, features = ["derive"] }
nom = { workspace = true }
nonempty = { workspace = true }
ordermap = { workspace = true, features = ["serde"] }
ouroboros = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
# needs to line up with BDK version
rusqlite = { workspace = true, features = ["bundled"] }
rusqlite_migration = { workspace = true }
rusty-leveldb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sneed = { workspace = true, features = ["observe"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
# Latest version (0.6.0) introduces a non-compatible libsqlite3-sys version
tokio-rusqlite = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
transitive = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zeromq = { workspace = true }

[features]
default = ["rustls"]
openssl = ["bdk_electrum/use-openssl"]
rustls = ["bdk_electrum/use-rustls"]

[dev-dependencies]
temp-dir = { workspace = true }

[lints]
workspace = true

[lib]
name = "bip300301_enforcer_lib"
path = "lib.rs"
doctest = false

[package.metadata.cargo-shear]
# Used by tonic-prost-build generated code in OUT_DIR, which cargo-shear can't see.
ignored = ["tonic-prost"]
