[package]
name = "bip300301_enforcer_lib"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
aes-gcm = { workspace = true, features = ["std"] }
argon2 = { workspace = true, features = ["std"] }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
bdk_chain = { workspace = true }
bdk_electrum = { workspace = true }
bdk_esplora = { workspace = true, features = ["tokio", "async-https-rustls"] }
bdk_wallet = { workspace = true, features = ["keys-bip39", "rusqlite"] }
bitcoin = { workspace = true }
bitcoin-jsonrpsee = { workspace = true }
bitcoin-send-tx-p2p = { workspace = true }
buffa = { workspace = true }
buffa-descriptor = { workspace = true }
buffa-types = { workspace = true }
byteorder = { workspace = true }
connectrpc = { workspace = true }
http-body = { workspace = true }
clap = { workspace = true, features = ["derive", "string", "std", "help", "usage", "error-context"] }
cusf-enforcer-mempool = { workspace = true }
derive_more = { workspace = true, features = ["debug", "display"] }
either = { workspace = true }
error-fatality = { workspace = true }
fallible-iterator = { workspace = true }
futures = { workspace = true }
hashlink = { workspace = true, features = ["serde_impl"] }
heed = { workspace = true }
heed-types = { workspace = true }
hex = { workspace = true }
jiff = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
miette = { workspace = true, features = ["derive"] }
nom = { workspace = true }
nonempty = { workspace = true }
ordermap = { workspace = true, features = ["serde"] }
ouroboros = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
rand = { workspace = true }
reqwest = { workspace = true }
# needs to line up with BDK version
rusqlite = { workspace = true, features = ["bundled"] }
rusqlite_migration = { workspace = true }
rusty-leveldb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sneed = { workspace = true, features = ["observe"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
# Latest version (0.6.0) introduces a non-compatible libsqlite3-sys version
tokio-rusqlite = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
transitive = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
bitcoin-p2mr-pqc = { workspace = true, optional = true }
bitcoinpqc = { workspace = true, optional = true }

[features]
default = ["drivechain", "rustls"]
drivechain = []
bip360 = ["dep:bitcoin-p2mr-pqc", "dep:bitcoinpqc"]
# Reserved for future SHRINCs backup-signature paths (no implementation yet).
shrincs = []
openssl = ["bdk_electrum/use-openssl"]
rustls = ["bdk_electrum/use-rustls"]

[dev-dependencies]
temp-dir = { workspace = true }

[lints]
workspace = true

[[example]]
name = "p2mr_signer"
path = "examples/p2mr_signer.rs"
required-features = ["bip360"]

[lib]
name = "bip300301_enforcer_lib"
path = "lib.rs"
doctest = false

